# l1x-core-public

./: LICENSE.txt  README.md
vm/: Cargo.toml
vm/primitives/: Cargo.toml
vm/primitives/src/: lib.rs
vm/traits/: Cargo.toml
vm/traits/src/: l1xvm_contract_call.rs  l1xvm_stake_call.rs  lib.rs  traits_l1xvm.rs
vm/vm/l1x-ebpf-runtime/: Cargo.toml  README.md
vm/vm/l1x-ebpf-runtime/src/: error.rs  lib.rs  logic.rs  syscall_math.rs  syscall_memory.rs  util.rs
vm/vm/l1x-rbpf/: Cargo.toml
vm/vm/l1x-rbpf/disabled_tests/: misc.rs  ubpf_jit_x86_64.rs  ubpf_vm.rs
vm/vm/l1x-rbpf/examples/: disassemble.rs  load_elf.rs  rbpf_plugin.rs  to_json.rs  uptime.rs
vm/vm/l1x-rbpf/src/: asm_parser.rs  assembler.rs  disassembler.rs  ebpf.rs  error.rs  execution_fee.rs  helpers.rs  insn_builder.rs  jit.rs  lib.rs  runtime_config.rs  verifier.rs
vm/vm/l1x-rbpf/tests/: assembler.rs  common.rs  disassembler.rs  ubpf_verifier.rs
vm/vm/l1x-vm-cli/: Cargo.toml
vm/vm/l1x-vm-cli/src/: helpers.rs  main.rs  trait_vm_impl.rs
vm/vm/vm-execution-fee/: Cargo.toml
vm/vm/vm-execution-fee/src/: execution_fees.rs  lib.rs
vm/vm/vm-outcome/: Cargo.toml
vm/vm/vm-outcome/src/: lib.rs  outcome.rs
