[package]
name = "traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
primitives = { package = 'primitives', path = '../primitives', default-features = false }
vm-outcome = { package = 'vm-outcome', path = '../vm/vm-outcome', default-features = false }
