[package]
name = "l1x-vm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4"
rocksdb = "0.21.0"

l1x-ebpf-runtime = {path = "../l1x-ebpf-runtime", package = "l1x-ebpf-runtime" }
l1x-rbpf= {path = "../l1x-rbpf", package = "rbpf" }
l1x-consensus-primitives = { path="../../primitives", package = "primitives" }
l1x-consensus-traits = { path="../../traits", package = "traits" }
l1x-vm-execution-fee = { path="../vm-execution-fee", package = "vm-execution-fee" }