[package]
name = "vm-execution-fee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = { package = 'primitives', path = '../../primitives', default-features = false }
rbpf = { package = 'rbpf', path = '../l1x-rbpf', default-features = false }